src/blocks/card/_saved/card_saved.css
@import "../__tag/card__tag.css";

.card.card_saved {
  height: 576px;
}

.card_saved:nth-child(3) {
  margin: 0 0 16px 0;
}

@media screen and (max-width: 1023px) {
  .card.card.card_saved {
    height: 420px;
  }
  .card_saved:nth-child(3) {
    margin: 0 0 8px 0;
  }
}


@media screen and (max-width: 767px) {
  .card.card.card_saved {
    margin: 0 0 10px 0;
    height: 440px;
  }
}

